fix(web): page overflow on mobile

--- a/apps/web/src/styles/pages/search.module.scss
+++ b/apps/web/src/styles/pages/search.module.scss
@@ -13,6 +13,7 @@
 .postsContainer {
   padding: 16px;
   border-right: 1px solid var(--color-gray-300);
+  max-width: 100vw;
 
   @media (min-width: 1536px) {
     padding: 0px 32px 0px 0px;
